--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
     "vite": "^2.9.5"
+  },
+  "dependencies": {
+    "svelte-time": "^0.6.1"
   }
 }
