--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write '{public,src}/**/*.{css,html,js,svelte}'",
-    "lint": "eslint --fix --quiet src --ext .js,.svelte"
+    "lint": "eslint --fix --quiet src --ext .js,.svelte",
+    "server": "nodemon ./server.js"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "eslint": "^8.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-svelte3": "^3.4.1",
+    "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
     "vite": "^2.9.5"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "morgan": "^1.10.0",
     "svelte-time": "^0.6.1"
   }
 }
