--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vite": "^2.9.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "morgan": "^1.10.0",
