--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "knex": "^2.0.0",
     "morgan": "^1.10.0",
+    "sqlite3": "^5.0.6",
     "svelte-time": "^0.6.1"
   }
 }
